--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
-  name: github
-  repo: abdelamhorizont/abdelammeer-homepage # replace this with your repo info
+  # name: github
+  repo: abdelamhorizont/abdelammeer-homepage 
   use_graphql: true
-  # name: git-gateway
+  name: git-gateway
   branch: master
   commit_messages:
     create: "Create {{collection}} “{{slug}}”"
