--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,96 @@ media_folder: static/img
 public_folder: /img
 
 collections:
+  - name: "blog"
+    label: "Blog"
+    folder: "src/pages/blog"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {
+          label: "Template Key",
+          name: "templateKey",
+          widget: "hidden",
+          default: "blog-post",
+        }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "date" }
+      - { label: "Cover Image", name: "cover-image", widget: image }
+      - {
+          label: "Content",
+          name: "variable-content",
+          widget: "list",
+          required: false,
+          types:
+            [
+              {
+                label: "Image Section",
+                name: "image-section",
+                widget: "object",
+                fields:
+                  [
+                    {
+                      label: "Columns",
+                      name: "columns",
+                      widget: "select",
+                      options: ["1", "3", "12"],
+                    },
+                    {
+                      label: "Images",
+                      name: "images",
+                      widget: "list",
+                      field:
+                        {
+                          label: "Image",
+                          name: "image",
+                          widget: "object",
+                          fields:
+                            [
+                              {
+                                label: "Image",
+                                name: "image",
+                                widget: "image",
+                                required: false,
+                              },
+                              {
+                                label: "Caption",
+                                name: "caption",
+                                widget: "string",
+                                required: false,
+                              },
+                            ],
+                        },
+                    },
+                  ],
+              },
+              {
+                label: "Text Section",
+                name: "text-section",
+                widget: "object",
+                field:
+                  {
+                    label: "Text",
+                    name: "text",
+                    widget: "markdown",
+                    required: false,
+                  },
+              },
+            ],
+        }
+      - {
+          label: "Project Infos",
+          name: "projectInfos",
+          widget: "markdown",
+          required: false,      
+        } 
+      - {
+          label: "Tags",
+          name: "tags",
+          widget: "select",
+          multiple: true,
+          options: ["All", "Object", "Space", "Research", "Exhibition"],
+        }
+
   - name: "work"
     label: "Work"
     folder: "src/pages/work"
@@ -105,6 +195,7 @@ collections:
           multiple: true,
           options: ["All", "Object", "Space", "Research", "Exhibition"],
         }
+
   - name: "space"
     label: "Space"
     folder: "src/pages/space"
@@ -115,72 +206,11 @@ collections:
           label: "Template Key",
           name: "templateKey",
           widget: "hidden",
-          default: "work-post",
+          default: "space-post",
         }
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "date" }
-      - { label: "Cover Image", name: "cover-image", widget: image }
-      - {
-          label: "Content",
-          name: "variable-content",
-          widget: "list",
-          required: false,
-          types:
-            [
-              {
-                label: "Image Section",
-                name: "image-section",
-                widget: "object",
-                fields:
-                  [
-                    {
-                      label: "Columns",
-                      name: "columns",
-                      widget: "select",
-                      options: ["1", "3", "12"],
-                    },
-                    {
-                      label: "Images",
-                      name: "images",
-                      widget: "list",
-                      field:
-                        {
-                          label: "Image",
-                          name: "image",
-                          widget: "object",
-                          fields:
-                            [
-                              {
-                                label: "Image",
-                                name: "image",
-                                widget: "image",
-                                required: false,
-                              },
-                              {
-                                label: "Caption",
-                                name: "caption",
-                                widget: "string",
-                                required: false,
-                              },
-                            ],
-                        },
-                    },
-                  ],
-              },
-              {
-                label: "Text Section",
-                name: "text-section",
-                widget: "object",
-                field:
-                  {
-                    label: "Text",
-                    name: "text",
-                    widget: "markdown",
-                    required: false,
-                  },
-              },
-            ],
-        }
+      - { label: "Cover Image", name: "cover-image", widget: image, required: false }
       - {
           label: "Project Infos",
           name: "projectInfos",
