--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -264,7 +264,7 @@ collections:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Heading", name: "heading", widget: "string" }
           - { label: "Subheading", name: "subheading", widget: "string" }
-      - file: "src/pages/work/index.md"
+      - file: "src/pages/work.md"
         label: "Work"
         name: "work"
         fields:
@@ -277,7 +277,7 @@ collections:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Heading", name: "heading", widget: "string" }
           - { label: "Subheading", name: "subheading", widget: "string" }
-      - file: "src/pages/space/index.md"
+      - file: "src/pages/space.md"
         label: "Space"
         name: "space"
         fields:
