--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,8 +57,8 @@ collections:
             ],
         }
       - {
-          label: "Description",
-          name: "description",
+          label: "description",
+          name: "Description",
           widget: "markdown",
           required: false,
         }
