--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -78,10 +78,16 @@ collections:
                 fields:
                   [
                     {
-                      label: "Columns",
-                      name: "columns",
+                      label: "Column Start",
+                      name: "column-start",
                       widget: "select",
-                      options: ["1", "3", "12"],
+                      options: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11"],
+                    },
+                    {
+                      label: "Column End",
+                      name: "column-end",
+                      widget: "select",
+                      options: ["2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"],
                     },
                     {
                       label: "Images",
