--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -87,7 +87,7 @@ collections:
                       label: "Column End",
                       name: "column-end",
                       widget: "select",
-                      options: ["2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"],
+                      options: ["2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13"],
                     },
                     {
                       label: "Images",
