--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,8 +19,8 @@ collections:
   - name: "blog"
     label: "Blog"
     folder: "src/pages/blog"
-    media_folder: ''
-    public_folder: ''
+    media_folder: ""
+    public_folder: ""
     media_library:
       allow_multiple: true
       config:
@@ -35,8 +35,15 @@ collections:
           default: "blog-post",
         }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Subtitle", name: "subtitle", widget: "string", required: false }
+      - {
+          label: "Subtitle",
+          name: "subtitle",
+          widget: "string",
+          required: false,
+        }
       - { label: "Type", name: "type", widget: "string" }
+      - { label: "Location", name: "location", widget: "string", required: false }
+      - { label: "Collaborators", name: "collaborators", widget: "string", required: false }
       - { label: "Date", name: "date", widget: "date" }
       - {
           label: "Cover",
@@ -81,13 +88,42 @@ collections:
                       label: "Column Start",
                       name: "column-start",
                       widget: "select",
-                      options: ["1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11"],
+                      required: false,
+                      options:
+                        [
+                          "1",
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                        ],
                     },
                     {
                       label: "Column End",
                       name: "column-end",
                       widget: "select",
-                      options: ["2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13"],
+                      required: false,
+                      options:
+                        [
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                          "12",
+                          "13",
+                        ],
                     },
                     {
                       label: "Images",
@@ -105,7 +141,7 @@ collections:
                                 name: "image",
                                 widget: "image",
                                 required: false,
-                                allow_multiple: true
+                                allow_multiple: true,
                               },
                               {
                                 label: "Caption",
@@ -122,13 +158,56 @@ collections:
                 label: "Text Section",
                 name: "text-section",
                 widget: "object",
-                field:
-                  {
-                    label: "Text",
-                    name: "text",
-                    widget: "markdown",
-                    required: false,
-                  },
+                fields:
+                  [
+                    {
+                      label: "Column Start",
+                      name: "column-start",
+                      widget: "select",
+                      required: false,
+                      options:
+                        [
+                          "1",
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                        ],
+                    },
+                    {
+                      label: "Column End",
+                      name: "column-end",
+                      widget: "select",
+                      required: false,
+                      options:
+                        [
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                          "12",
+                          "13",
+                        ],
+                    },
+                    {
+                      label: "Text",
+                      name: "text",
+                      widget: "markdown",
+                      required: false,
+                    },
+                  ],
               },
             ],
         }
