--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -42,8 +42,18 @@ collections:
           required: false,
         }
       - { label: "Type", name: "type", widget: "string" }
-      - { label: "Location", name: "location", widget: "string", required: false }
-      - { label: "Collaborators", name: "collaborators", widget: "string", required: false }
+      - {
+          label: "Location",
+          name: "location",
+          widget: "string",
+          required: false,
+        }
+      - {
+          label: "Collaborators",
+          name: "collaborators",
+          widget: "string",
+          required: false,
+        }
       - { label: "Date", name: "date", widget: "date" }
       - {
           label: "Cover",
@@ -233,11 +243,29 @@ collections:
           default: "work-post",
         }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "date" }
-      - { label: "Cover Image", name: "cover-image", widget: image }
       - {
-          label: "Video",
-          name: "video",
+          label: "Subtitle",
+          name: "subtitle",
+          widget: "string",
+          required: false,
+        }
+      - { label: "Type", name: "type", widget: "string" }
+      - {
+          label: "Location",
+          name: "location",
+          widget: "string",
+          required: false,
+        }
+      - {
+          label: "Collaborators",
+          name: "collaborators",
+          widget: "string",
+          required: false,
+        }
+      - { label: "Date", name: "date", widget: "date" }
+      - {
+          label: "Cover",
+          name: "cover",
           widget: "object",
           fields:
             [
@@ -256,6 +284,12 @@ collections:
             ],
         }
       - {
+          label: "description",
+          name: "Description",
+          widget: "markdown",
+          required: false,
+        }
+      - {
           label: "Content",
           name: "variable-content",
           widget: "list",
@@ -269,10 +303,45 @@ collections:
                 fields:
                   [
                     {
-                      label: "Columns",
-                      name: "columns",
+                      label: "Column Start",
+                      name: "column-start",
                       widget: "select",
-                      options: ["1", "3", "12"],
+                      required: false,
+                      options:
+                        [
+                          "1",
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                        ],
+                    },
+                    {
+                      label: "Column End",
+                      name: "column-end",
+                      widget: "select",
+                      required: false,
+                      options:
+                        [
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                          "12",
+                          "13",
+                        ],
                     },
                     {
                       label: "Images",
@@ -290,6 +359,7 @@ collections:
                                 name: "image",
                                 widget: "image",
                                 required: false,
+                                allow_multiple: true,
                               },
                               {
                                 label: "Caption",
@@ -306,21 +376,58 @@ collections:
                 label: "Text Section",
                 name: "text-section",
                 widget: "object",
-                field:
-                  {
-                    label: "Text",
-                    name: "text",
-                    widget: "markdown",
-                    required: false,
-                  },
+                fields:
+                  [
+                    {
+                      label: "Column Start",
+                      name: "column-start",
+                      widget: "select",
+                      required: false,
+                      options:
+                        [
+                          "1",
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                        ],
+                    },
+                    {
+                      label: "Column End",
+                      name: "column-end",
+                      widget: "select",
+                      required: false,
+                      options:
+                        [
+                          "2",
+                          "3",
+                          "4",
+                          "5",
+                          "6",
+                          "7",
+                          "8",
+                          "9",
+                          "10",
+                          "11",
+                          "12",
+                          "13",
+                        ],
+                    },
+                    {
+                      label: "Text",
+                      name: "text",
+                      widget: "markdown",
+                      required: false,
+                    },
+                  ],
               },
             ],
-        }
-      - {
-          label: "Project Infos",
-          name: "projectInfos",
-          widget: "markdown",
-          required: false,
         }
       - {
           label: "Tags",
