--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -335,23 +335,45 @@ collections:
                               {
                                 label: "Image",
                                 name: "image",
-                                widget: "image",
-                                required: false,
-                                allow_multiple: true,
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "Image",
+                                      name: "image",
+                                      widget: "image",
+                                      required: false,
+                                      allow_multiple: true,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
                               },
                               {
-                                label: "Video File",
-                                name: "videoFile",
-                                widget: file,
-                                required: false,
+                                label: "Video",
+                                name: "video",
+                                widget: "object",
+                                fields:
+                                  [
+                                    {
+                                      label: "Video File",
+                                      name: "videoFile",
+                                      widget: file,
+                                      required: false,
+                                    },
+                                    {
+                                      label: "Caption",
+                                      name: "caption",
+                                      widget: "string",
+                                      required: false,
+                                    },
+                                  ],
                               },
                             ],
-                        },
-                        {
-                          label: "Caption",
-                          name: "caption",
-                          widget: "string",
-                          required: false,
                         },
                       ],
                   },
