--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -429,51 +429,28 @@ collections:
                       label: "Images",
                       name: "images",
                       widget: "list",
-                      required: false,
-                      types:
-                        [
-                          {
-                            label: "Image",
-                            name: "image",
-                            widget: "object",
-                            fields:
-                              [
-                                {
-                                  label: "Image",
-                                  name: "image",
-                                  widget: "image",
-                                  required: false,
-                                  allow_multiple: true,
-                                },
-                                {
-                                  label: "Caption",
-                                  name: "caption",
-                                  widget: "string",
-                                  required: false,
-                                },
-                              ],
-                          },
-                          {
-                            label: "Video",
-                            name: "video",
-                            widget: "object",
-                            fields:
-                              [
-                                {
-                                  label: "Video File",
-                                  name: "videoFile",
-                                  widget: file,
-                                  required: false,
-                                },
-                                {
-                                  label: "Caption",
-                                  name: "caption",
-                                  widget: "string",
-                                  required: false,
-                                },
-                              ],
-                          },
-                        ],
+                      field:
+                        {
+                          label: "Image",
+                          name: "image",
+                          widget: "object",
+                          fields:
+                            [
+                              {
+                                label: "Image",
+                                name: "image",
+                                widget: "image",
+                                required: false,
+                                allow_multiple: true,
+                              },
+                              {
+                                label: "Caption",
+                                name: "caption",
+                                widget: "string",
+                                required: false,
+                              },
+                            ],
+                        },
                     },
                   ],
               },
